[UPDATED] task enpoint and swagger
